fixed header spacing to match design

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,7 +12,7 @@ html {
     z-index: 1;
 
     box-sizing: border-box;
-    padding: 0;
+    padding: 19px 0 0;
 
     a {
       border-bottom: none;
